--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "split-type": "^0.3.4"
   },
   "devDependencies": {
